fixes the issue of horizontal scroll

--- a/style.css
+++ b/style.css
@@ -404,7 +404,7 @@ h3{
     margin: 100px auto;
     text-align: center;
     padding: 60px;
-    background-image:  linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(/Assets/Images/banner2.jpg);
+    background-image:  linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(Assets/Images/banner2.jpg);
     background-position: center;
     border-radius: 10px;
 
@@ -435,8 +435,15 @@ h3{
 
 
 @media(max-width:760px){
+    .callToAction{
+        width: 50vw;
+    }
     .callToAction h1{
         font-size: 24px;
+    }
+
+    h1{
+        font-size:24px;
     }
 }
 
